--- a/.gitignore
+++ b/.gitignore
@@ -7,3 +7,5 @@ __pycache__/metrics.cpython-37.pyc
 .idea/inspectionProfiles/profiles_settings.xml
 .idea/csv-plugin.xml
 output/*
+games/__pycache__/reexposition.cpython-37.pyc
+games/__pycache__/basic_.cpython-37.pyc
